<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ThirdFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#3c254b"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:ignore="ExtraText">

                <Button
                    android:id="@+id/btnSettings"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"

                    android:background="@drawable/settings"
                    app:backgroundTint="@color/white" />

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView

                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="15dp"
                        android:src="@drawable/face"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:text="@string/manjinder_singh_brar"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textStyle="normal" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_marginTop="3dp"
                            android:text="@string/mr_brar077_gmail_com"
                            android:textColor="#c1bdc1"
                            android:textSize="13sp" />


                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@string/hypd_credit_wallet"
                            android:textColor="#c1bdc1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@string/_1523_05"
                            android:textColor="#f6a438"
                            android:textSize="22.5sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@string/following"
                            android:textColor="#c1bdc1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@string/_1531"
                            android:textColor="@color/white"
                            android:textSize="22.5sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="12dp"
                        android:layout_weight="1"
                        android:orientation="vertical">


                        <Button

                            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@string/profile_details"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            app:icon="@drawable/user"
                            app:iconSize="25dp"
                            app:iconTint="@color/white"
                            app:strokeColor="#c1bdc1"
                            app:strokeWidth="0.1dp" />


                        <Button

                            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="My orders"
                            android:textAppearance="?android:attr/textAppearanceLarge"

                            android:textColor="@color/white"
                            android:textSize="14sp"
                            app:icon="@drawable/shipping"
                            app:iconSize="25dp"
                            app:iconTint="@color/white"
                            app:strokeColor="#c1bdc1"
                            app:strokeWidth="0.1dp" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <Button

                            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="Saved Cards"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            app:icon="@drawable/creditcard"
                            app:iconSize="25dp"
                            app:iconTint="@color/white"
                            app:strokeColor="#c1bdc1"
                            app:strokeWidth="0.1dp" />


                        <Button

                            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="My Addresses"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            app:icon="@drawable/shipping"

                            app:iconSize="25dp"
                            app:iconTint="@color/white"
                            app:strokeColor="#c1bdc1"
                            app:strokeWidth="0.1dp" />


                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:text="Scratch Cards"
                android:textSize="15sp" />


            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:src="@drawable/ic_sharp_add_circle_24" />

        </LinearLayout>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#f2f2f2"
            app:cardCornerRadius="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:text="Gifts &amp; Rewards"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginBottom="15dp"

            android:weightSum="5">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/gift" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Gift Voucher / Coupons"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="You've earned 1,523.05 Points" />

            </LinearLayout>


            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24" />


        </LinearLayout>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="#fff1ea"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="Refer a friend &amp; Earn"
                        android:textColor="@color/black"
                        android:textSize="17sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:lines="2"
                        android:text="Give your friends 10% off on their\nfirst service from HYPD" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="Copy your code XXXXXXXX" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnInvite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:layout_marginLeft="15dp"
                        android:text="Invite friends"
                        app:backgroundTint="#d25a42"
                        app:cornerRadius="10dp" />


                </LinearLayout>


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/pan" />

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>




    </LinearLayout>




</ScrollView>